@@ -1,3 +1,12 @@
+2018-07-29  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Release 0.2.10
+
+	* README.md: Also mention reticulate and vignette
+
+	* src/RcppExports.cpp: Added autogenerated file
+	* src/init.c: Removed, content in src/RcppExports.cpp
+
 2018-07-22  Dirk Eddelbuettel  <edd@debian.org>
 
 	* vignettes/RcppCNPy-intro.Rmd: Updated, now with collapse option
